Update footer design

--- a/index.html
+++ b/index.html
@@ -99,19 +99,19 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-md-3 country-flag border-end border-dark">
+              <div class="col-md-3 country-flag border-end">
                 <div class="d-flex">
                   <img src="img/bangladesh.png">
                   <div>
                     <li> Bangladesh Registered Address: RootSoft IT 2nd Floor, Jhorna Complex, Kumarpara, Sylhet 3100 Bangladesh</li>
                   </div>
                 </div>
-                <div class="d-flex">
+                <div class="d-flex pt-2">
                   <i class="fas fa-phone-square-alt"></i>
                   <li class="ps-2"> 00000000000</li>
                 </div>
               </div>
-              <div class="col-md-3 country-flag border-end border-dark">
+              <div class="col-md-3 country-flag border-end">
 
                 <div class="d-flex">
                   <img src="img/uk.png">
@@ -119,11 +119,11 @@
                     <li> UK Registered Address: RootSoft IT Limited 71-75 Shelton Street, Covent Garden, London WC2H 9JQ United Kingdom</li>
                   </div>
                 </div>
-                <div class="d-flex">
+                <div class="d-flex pt-2">
                   <i class="fas fa-phone-square-alt"></i>
                   <li class="ps-2"> UK Company Registration Number: 12367550</li>
                 </div>
-                <div class="d-flex">
+                <div class="d-flex pt-2">
                   <i class="fas fa-phone-square-alt"></i>
                   <li class="ps-2"> 00000000000</li>
                 </div>
@@ -136,39 +136,37 @@
                     <li> USA Registered Address: RootSoft IT LLC 201 East 5th St. STE 1200 Sheridan, WY 82801 United States</li>
                   </div>
                 </div>
-                <div class="d-flex">
+                <div class="d-flex pt-2">
                   <i class="fas fa-phone-square-alt"></i>
                   <li class="ps-2"> 00000000000</li>
                 </div>
               </div>
               <div class="col-md-3 company">
-                <ul>
-                  <li>
+                  <p>
                     <a href="#" target="_blank"><i class="fas fa-angle-right"></i> About Us
                     </a>
-                  </li>
+                  </p>
                   
-                  <li>
+                  <p>
                     <a href="#" target="_blank"><i class="fas fa-angle-right"></i> Services
                     </a>
-                  </li>
-                  <li>
+                  </p>
+                  <p>
                     <a href="#" target="_self"><i class="fas fa-angle-right"></i> Team
                     </a>
-                  </li>
-                  <li>
+                  </p>
+                  <p>
                     <a href="#" target="_blank"><i class="fas fa-angle-right"></i> Pricing
                     </a>
-                  </li>
-                  <li>
+                  </p>
+                  <p>
                     <a href="#" target="_blank"><i class="fas fa-angle-right"></i> Project
                     </a>
-                  </li>
-                  <li>
+                  </p>
+                  <p>
                     <a href="#" target="_blank"><i class="fas fa-angle-right"></i> Career
                     </a>
-                  </li>
-                </ul>
+                  </p>
               </div>
             </div>
             
